--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -1,1 +1,9 @@
 auth.property= Auth Profile Dev
+
+eureka.instance.hostname=localhost
+server.port=0
+console.api.url = http://localhost:8080/api/console
+mail.api.url = http://localhost:8080/api/mail
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
