--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -7,3 +7,7 @@ mail.api.url = http://localhost:8080/api/mail
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
+spring.datasource.username=root
+spring.datasource.password=
