--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -1,13 +1,15 @@
-auth.property= Auth Profile Developers
+auth.property= Auth Profile Developers 1
 
 eureka.instance.hostname=localhost
 server.port=0
 console.api.url = http://localhost:8080/api/console
 mail.api.url = http://localhost:8080/api/mail
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+
