--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,8 +1,4 @@
-auth.property= Auth Profile Developers
-
-eureka.instance.hostname=localhost
-console.api.url = http://localhost:8080/api/console
-mail.api.url = http://localhost:8080/api/mail
+console.property= Console Profile Developers
 
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
@@ -10,3 +6,6 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+eureka.instance.hostname=localhost
+auth.api.url = http://localhost:8080/api/auth/token
+app.console = 2
