--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -8,4 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
+document.api.url = http://localhost:8080/api/document
+
 app.console = 2
