--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -11,3 +11,4 @@ auth.api.url = http://localhost:8080/api/auth/token
 document.api.url = http://localhost:8080/api/document
 
 app.console = 2
+app.proveedor = 3
