--- a/document-microservice-dev.properties
+++ b/document-microservice-dev.properties
@@ -7,4 +7,5 @@ spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.max-file-size = 50MB
 
 mi.app.proveedores = 3
+mi.app = 1
 auth.api.url = http://localhost:8080/api/auth/token
