--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -12,3 +12,4 @@ document.api.url = http://localhost:8080/api/document
 
 app.console = 2
 app.proveedor = 3
+id.carpeta.padre = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
