--- a/app-proveedor-microservice-dev.properties
+++ b/app-proveedor-microservice-dev.properties
@@ -6,15 +6,22 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-app.proveedor = 3
-id.carpeta.propio = 1N5vx0_Bhh1yGd2iztYtMD7Eu397BydOG
 id.carpeta.padre = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
+app.proveedor = 3
 dominio=http://localhost:5173/
 
 eureka.instance.hostname=localhost
-
 auth.api.url = http://localhost:8080/api/auth/token
 console.api.url = http://localhost:8080/api/console
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
 
+permisoAdministradorPlataforma :1
+permisoSuperAdministrador :2
+permisoAdministrador :3
+permisoLector:4
+permisoProveedor:5
+
+tipoAdministradorPlataforma : 1
+tipoCliente :2
+tipoProveedor : 3
