--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -13,3 +13,14 @@ document.api.url = http://localhost:8080/api/document
 app.console = 2
 app.proveedor = 3
 id.carpeta.padre = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
+
+
+permisoAdministradorPlataforma :1
+permisoSuperAdministrador :2
+permisoAdministrador :3
+permisoLector:4
+permisoProveedor:5
+
+tipoAdministradorPlataforma : 1
+tipoCliente :2
+tipoProveedor : 3
