--- a/document-microservice-dev.properties
+++ b/document-microservice-dev.properties
@@ -9,3 +9,14 @@ spring.servlet.multipart.max-file-size = 50MB
 mi.app.proveedores = 3
 mi.app = 1
 auth.api.url = http://localhost:8080/api/auth/token
+
+
+permisoAdministradorPlataforma :1
+permisoSuperAdministrador :2
+permisoAdministrador :3
+permisoLector:4
+permisoProveedor:5
+
+tipoAdministradorPlataforma : 1
+tipoCliente :2
+tipoProveedor : 3
