--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -10,3 +10,12 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+permisoAdministradorPlataforma :1
+permisoSuperAdministrador :2
+permisoAdministrador :3
+permisoLector:4
+permisoProveedor:5
+
+tipoAdministradorPlataforma : 1
+tipoCliente :2
+tipoProveedor : 3
