--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -1,7 +1,16 @@
 mail.property= Mail Profile Developers
-
-
 app.proveedores = 3
 eureka.instance.hostname=localhost
 dominio=http://localhost:5173/app-ppal#
 auth.api.url = http://localhost:8080/api/auth/token
+
+
+permisoAdministradorPlataforma :1
+permisoSuperAdministrador :2
+permisoAdministrador :3
+permisoLector:4
+permisoProveedor:5
+
+tipoAdministradorPlataforma : 1
+tipoCliente :2
+tipoProveedor : 3
