--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -19,3 +19,6 @@ permisoProveedor:5
 tipoAdministradorPlataforma : 1
 tipoCliente :2
 tipoProveedor : 3
+
+todosLosProcesos : 1
+procesoProveedor : 2
