--- a/app-proveedor-microservice-dev.properties
+++ b/app-proveedor-microservice-dev.properties
@@ -25,3 +25,6 @@ permisoProveedor:5
 tipoAdministradorPlataforma : 1
 tipoCliente :2
 tipoProveedor : 3
+
+todosLosProcesos : 1
+procesoProveedor : 2
