--- a/document-microservice-dev.properties
+++ b/document-microservice-dev.properties
@@ -6,7 +6,7 @@ eureka.instance.hostname=localhost
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.max-file-size = 50MB
 
-mi.app.proveedores = 3
+app.proveedor = 3
 mi.app = 1
 auth.api.url = http://localhost:8080/api/auth/token
 
@@ -20,3 +20,6 @@ permisoProveedor:5
 tipoAdministradorPlataforma : 1
 tipoCliente :2
 tipoProveedor : 3
+
+todosLosProcesos : 1
+procesoProveedor : 2
