--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -1,5 +1,5 @@
 mail.property= Mail Profile Developers
-app.proveedores = 3
+app.proveedor = 3
 eureka.instance.hostname=localhost
 dominio=http://localhost:5173/app-ppal#
 auth.api.url = http://localhost:8080/api/auth/token
@@ -14,3 +14,6 @@ permisoProveedor:5
 tipoAdministradorPlataforma : 1
 tipoCliente :2
 tipoProveedor : 3
+
+todosLosProcesos : 1
+procesoProveedor : 2
