--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -3,7 +3,7 @@ app.proveedor = 3
 eureka.instance.hostname=localhost
 dominio=http://localhost:5173/app-ppal#
 auth.api.url = http://localhost:8080/api/auth/token
-
+test.mail = cgonzalez@activos.com.co
 
 permisoAdministradorPlataforma :1
 permisoSuperAdministrador :2
