--- a/app-proveedor-microservice-dev.properties
+++ b/app-proveedor-microservice-dev.properties
@@ -16,15 +16,15 @@ console.api.url = http://localhost:8080/api/console
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
 
-permisoAdministradorPlataforma :1
-permisoSuperAdministrador :2
-permisoAdministrador :3
-permisoLector:4
-permisoProveedor:5
+p.admin.plataforma = 1
+p.super.admin=2
+p.admin=3
+p.lector=4
+p.proveedor=5
 
-tipoAdministradorPlataforma : 1
-tipoCliente :2
-tipoProveedor : 3
+t.admin.plataforma = 1
+t.cliente = 2
+t.proveedor =3
 
-todosLosProcesos : 1
-procesoProveedor : 2
+t.procesos = 1
+p.procesos = 2
