--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -10,15 +10,15 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-permisoAdministradorPlataforma :1
-permisoSuperAdministrador :2
-permisoAdministrador :3
-permisoLector:4
-permisoProveedor:5
+p.admin.plataforma = 1
+p.super.admin=2
+p.admin=3
+p.lector=4
+p.proveedor=5
 
-tipoAdministradorPlataforma : 1
-tipoCliente :2
-tipoProveedor : 3
+t.admin.plataforma = 1
+t.cliente = 2
+t.proveedor =3
 
-todosLosProcesos : 1
-procesoProveedor : 2
+t.procesos = 1
+p.procesos = 2
