--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -15,15 +15,15 @@ app.proveedor = 3
 id.carpeta.padre = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
 
 
-permisoAdministradorPlataforma :1
-permisoSuperAdministrador :2
-permisoAdministrador :3
-permisoLector:4
-permisoProveedor:5
+p.admin.plataforma = 1
+p.super.admin=2
+p.admin=3
+p.lector=4
+p.proveedor=5
 
-tipoAdministradorPlataforma : 1
-tipoCliente :2
-tipoProveedor : 3
+t.admin.plataforma = 1
+t.cliente = 2
+t.proveedor =3
 
-todosLosProcesos : 1
-procesoProveedor : 2
+t.procesos = 1
+p.procesos = 2
