--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -2,18 +2,19 @@ mail.property= Mail Profile Developers
 app.proveedor = 3
 eureka.instance.hostname=localhost
 dominio=http://localhost:5173/app-ppal#
+
 auth.api.url = http://localhost:8080/api/auth/token
 test.mail = cgonzalez@activos.com.co
 
-permisoAdministradorPlataforma :1
-permisoSuperAdministrador :2
-permisoAdministrador :3
-permisoLector:4
-permisoProveedor:5
+p.admin.plataforma = 1
+p.super.admin=2
+p.admin=3
+p.lector=4
+p.proveedor=5
 
-tipoAdministradorPlataforma : 1
-tipoCliente :2
-tipoProveedor : 3
+t.admin.plataforma = 1
+t.cliente = 2
+t.proveedor =3
 
-todosLosProcesos : 1
-procesoProveedor : 2
+t.procesos = 1
+p.procesos = 2
