--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -1,4 +1,4 @@
-auth.property= Auth Profile Developers
+auth.property= Auth Profile Developer
 
 eureka.instance.hostname=localhost
 console.api.url = http://localhost:8080/api/console
