--- a/document-microservice-dev.properties
+++ b/document-microservice-dev.properties
@@ -1,4 +1,4 @@
-document.property= Document Profile Developers
+document.property= Document Profile Developer
 
 id.carpeta.papelera = 174FUdX5ZqKehqISs8ZXSydXn5MJKciJF
 
