--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -1,4 +1,4 @@
-mail.property= Mail Profile Developers
+mail.property= Mail Profile Developer
 app.proveedor = 3
 eureka.instance.hostname=localhost
 dominio=http://localhost:5173/app-ppal#
