--- a/app-proveedor-microservice-dev.properties
+++ b/app-proveedor-microservice-dev.properties
@@ -1,4 +1,4 @@
-app-proveedor.property= App Proveedor Profile Developers
+app-proveedor.property= App Proveedor Profile Developer
 
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
