--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,4 +1,4 @@
-console.property= Console Profile Developers
+console.property= Console Profile Developer
 
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
@@ -12,7 +12,7 @@ document.api.url = http://localhost:8080/api/document
 
 app.console = 2
 app.proveedor = 3
-id.carpeta.padre = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
+id.carpeta.padre.app.proveedores = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
 
 
 p.admin.plataforma = 1
