--- a/document-microservice-dev.properties
+++ b/document-microservice-dev.properties
@@ -6,6 +6,7 @@ eureka.instance.hostname=localhost
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.max-file-size = 50MB
 
+app.console = 2
 app.proveedor = 3
 mi.app = 1
 auth.api.url = http://localhost:8080/api/auth/token
