--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -10,15 +10,15 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-p.admin.plataforma = 1
+p.admin.plataform = 1
 p.super.admin=2
 p.admin=3
-p.lector=4
-p.proveedor=5
+p.reader=4
+p.provider=5
 
 t.admin.plataforma = 1
-t.cliente = 2
-t.proveedor =3
+t.client = 2
+t.provider =3
 
-t.procesos = 1
-p.procesos = 2
+t.process = 1
+p.process = 2
