--- a/document-microservice-dev.properties
+++ b/document-microservice-dev.properties
@@ -1,26 +1,25 @@
 document.property= Document Profile Developer
 
-id.carpeta.papelera = 174FUdX5ZqKehqISs8ZXSydXn5MJKciJF
+id.folder.trash = 174FUdX5ZqKehqISs8ZXSydXn5MJKciJF
 
 eureka.instance.hostname=localhost
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.max-file-size = 50MB
 
 app.console = 2
-app.proveedor = 3
-mi.app = 1
+app.provider = 3
+app.document = 1
 auth.api.url = http://localhost:8080/api/auth/token
 
-
-p.admin.plataforma = 1
+p.admin.plataform = 1
 p.super.admin=2
 p.admin=3
-p.lector=4
-p.proveedor=5
+p.reader=4
+p.provider=5
 
-t.admin.plataforma = 1
-t.cliente = 2
-t.proveedor =3
+t.admin.plataform = 1
+t.client = 2
+t.provider =3
 
-t.procesos = 1
-p.procesos = 2
+t.process = 1
+p.process = 2
