--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -1,20 +1,20 @@
 mail.property= Mail Profile Developer
-app.proveedor = 3
+app.provider = 3
 eureka.instance.hostname=localhost
-dominio=http://localhost:5173/app-ppal#
+provider=http://localhost:5173/app-ppal#
 
 auth.api.url = http://localhost:8080/api/auth/token
 test.mail = cgonzalez@activos.com.co
 
-p.admin.plataforma = 1
+p.admin.plataform = 1
 p.super.admin=2
 p.admin=3
-p.lector=4
-p.proveedor=5
+p.reader=4
+p.provider=5
 
-t.admin.plataforma = 1
-t.cliente = 2
-t.proveedor =3
+t.admin.plataform = 1
+t.client = 2
+t.provider =3
 
-t.procesos = 1
-p.procesos = 2
+t.process = 1
+p.process = 2
