--- a/app-proveedor-microservice-dev.properties
+++ b/app-proveedor-microservice-dev.properties
@@ -1,4 +1,4 @@
-app-proveedor.property= App Proveedor Profile Developer
+app-provider.property= App Proveedor Profile Developer
 
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
@@ -6,9 +6,9 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-id.carpeta.padre = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
-app.proveedor = 3
-dominio=http://localhost:5173/
+id.folder.principal = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
+app.provider = 3
+domain=http://localhost:5173/
 
 eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
@@ -16,15 +16,15 @@ console.api.url = http://localhost:8080/api/console
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
 
-p.admin.plataforma = 1
+p.admin.plataform = 1
 p.super.admin=2
 p.admin=3
-p.lector=4
-p.proveedor=5
+p.reader=4
+p.provider=5
 
-t.admin.plataforma = 1
-t.cliente = 2
-t.proveedor =3
+t.admin.plataform = 1
+t.client = 2
+t.provider =3
 
-t.procesos = 1
-p.procesos = 2
+t.process = 1
+p.process = 2
