--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -10,20 +10,20 @@ eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
 document.api.url = http://localhost:8080/api/document
 
+app.principal = 1
 app.console = 2
-app.proveedor = 3
-id.carpeta.padre.app.proveedores = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
+app.provider = 3
+id.folder.principal.app.provider = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
 
-
-p.admin.plataforma = 1
+p.admin.plataform = 1
 p.super.admin=2
 p.admin=3
-p.lector=4
-p.proveedor=5
+p.reader=4
+p.provider=5
 
-t.admin.plataforma = 1
-t.cliente = 2
-t.proveedor =3
+t.admin.plataform = 1
+t.client = 2
+t.provider =3
 
-t.procesos = 1
-p.procesos = 2
+t.process = 1
+p.process = 2
