--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -6,6 +6,7 @@ provider=http://localhost:5173/app-ppal#
 auth.api.url = http://localhost:8080/api/auth/token
 test.mail = cgonzalez@activos.com.co
 
+domain=http://localhost:5173/
 p.admin.plataform = 1
 p.super.admin=2
 p.admin=3
