--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -1,10 +1,12 @@
 mail.property= Mail Profile Developer
-app.provider = 3
 eureka.instance.hostname=localhost
 provider=http://localhost:5173/app-ppal#
 
 auth.api.url = http://localhost:8080/api/auth/token
 test.mail = cgonzalez@activos.com.co
+
+app.console = 2
+app.provider = 3
 
 domain=http://localhost:5173/
 p.admin.plataform = 1
