--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -1,4 +1,4 @@
-mail.property= Mail Profile Developer
+mail.property= Mail Profile Develope
 eureka.instance.hostname=localhost
 provider=http://localhost:5173/app-ppal#
 
