--- a/app-provider-microservice-dev.properties
+++ b/app-provider-microservice-dev.properties
@@ -7,7 +7,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 id.folder.principal = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
+
+app.console = 2
 app.provider = 3
+
 domain=http://localhost:5173/
 
 eureka.instance.hostname=localhost
