--- a/provider-document-microservice-dev.properties
+++ b/provider-document-microservice-dev.properties
@@ -1,4 +1,4 @@
-app-provider.property= App Proveedor Profile Developer
+app-provider.property= Provider Document Profile Developer
 
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
@@ -15,6 +15,8 @@ domain=http://localhost:5173/
 
 eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
+app.provider.general.api.url = http://localhost:8080/api/app-provider/general
+provider.api.url = http://localhost:8080/api/provider
 console.api.url = http://localhost:8080/api/console
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
