--- a/document-microservice-dev.properties
+++ b/document-microservice-dev.properties
@@ -6,6 +6,9 @@ eureka.instance.hostname=localhost
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.max-file-size = 50MB
 
+server.http.max-in-memory-size = 52428800
+
+
 app.console = 2
 app.provider = 3
 auth.api.url = http://localhost:8080/api/auth/token
