--- a/provider-microservice-dev.properties
+++ b/provider-microservice-dev.properties
@@ -7,6 +7,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 id.folder.principal = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
+server.http.max-in-memory-size = 52428800
+
 
 app.console = 2
 app.provider = 3
