--- a/provider-document-microservice-dev.properties
+++ b/provider-document-microservice-dev.properties
@@ -1,4 +1,4 @@
-app-provider.property= Provider Document Profile Developer
+app-provider.property= Provider Profile Developer
 
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
@@ -7,6 +7,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 id.folder.principal = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
+server.http.max-in-memory-size = 52428800
+
 
 app.console = 2
 app.provider = 3
