--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -3,6 +3,8 @@ eureka.instance.hostname=localhost
 provider=http://localhost:5173/app-ppal#
 
 auth.api.url = http://localhost:8080/api/auth/token
+document.api.url = http://localhost:8080/api/document
+
 test.mail = cgonzalez@activos.com.co
 
 app.console = 2
