--- a/app-provider-general-microservice-dev.properties
+++ b/app-provider-general-microservice-dev.properties
@@ -7,7 +7,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 id.folder.principal = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
-server.http.max-in-memory-size=52428800
 
 
 app.console = 2
@@ -17,7 +16,7 @@ domain=http://localhost:5173/
 
 eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
-provider.api.url = http://localhost:8080/api/provider
+provider.document.api.url = http://localhost:8080/api/provider-document
 console.api.url = http://localhost:8080/api/console
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
