--- a/app-provider-general-microservice-dev.properties
+++ b/app-provider-general-microservice-dev.properties
@@ -16,7 +16,7 @@ domain=http://localhost:5173/
 
 eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
-provider.document.api.url = http://localhost:8080/api/provider-document
+provider.api.url = http://localhost:8080/api/provider
 console.api.url = http://localhost:8080/api/console
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
