--- a/authorization-microservice-dev.properties
+++ b/authorization-microservice-dev.properties
@@ -10,12 +10,14 @@ eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
 document.api.url = http://localhost:8080/api/document
 user.api.url = http://localhost:8080/api/user
-authorization.api.url = http://localhost:8080/api/authorization
+console.api.url = http://localhost:8080/api/console
+client.api.url = http://localhost:8080/api/client
 
 
 app.principal = 1
 app.console = 2
 app.provider = 3
+id.folder.principal.app.provider = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
 
 p.admin.plataform = 1
 p.super.admin=2
