--- a/user-microservice-dev.properties
+++ b/user-microservice-dev.properties
@@ -1,17 +1,19 @@
-auth.property= Auth Profile Developer
-
-eureka.instance.hostname=localhost
-console.api.url = http://localhost:8080/api/console
-mail.api.url = http://localhost:8080/api/mail
-authorization.api.url = http://localhost:8080/api/authorization
-client.api.url = http://localhost:8080/api/client
-user.api.url = http://localhost:8080/api/user
+console.property= Console Profile Developer
 
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+eureka.instance.hostname=localhost
+auth.api.url = http://localhost:8080/api/auth/token
+user.api.url = http://localhost:8080/api/user
+
+
+app.principal = 1
+app.console = 2
+app.provider = 3
 
 p.admin.plataform = 1
 p.super.admin=2
