--- a/provider-document-microservice-dev.properties
+++ b/provider-document-microservice-dev.properties
@@ -17,7 +17,8 @@ eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
 app.provider.general.api.url = http://localhost:8080/api/app-provider/general
 provider.api.url = http://localhost:8080/api/provider
-console.api.url = http://localhost:8080/api/console
+user.api.url = http://localhost:8080/api/user
+client.api.url = http://localhost:8080/api/client
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
 
