--- a/provider-microservice-dev.properties
+++ b/provider-microservice-dev.properties
@@ -18,6 +18,8 @@ eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
 provider.document.api.url = http://localhost:8080/api/provider-document
 console.api.url = http://localhost:8080/api/console
+user.api.url = http://localhost:8080/api/user
+client.api.url = http://localhost:8080/api/client
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
 
