--- a/app-provider-general-microservice-dev.properties
+++ b/app-provider-general-microservice-dev.properties
@@ -16,7 +16,8 @@ domain=http://localhost:5173/
 eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
 provider.api.url = http://localhost:8080/api/provider
-console.api.url = http://localhost:8080/api/console
+console.api.url = http://localhost:8080/api/client
+user.api.url = http://localhost:8080/api/user
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
 
