--- a/provider-microservice-dev.properties
+++ b/provider-microservice-dev.properties
@@ -17,7 +17,7 @@ domain=http://localhost:5173/
 eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
 provider.document.api.url = http://localhost:8080/api/provider-document
-console.api.url = http://localhost:8080/api/console
+authorization.api.url = http://localhost:8080/api/authorization
 user.api.url = http://localhost:8080/api/user
 client.api.url = http://localhost:8080/api/client
 document.api.url = http://localhost:8080/api/document
