--- a/client-microservice-dev.properties
+++ b/client-microservice-dev.properties
@@ -11,6 +11,8 @@ auth.api.url = http://localhost:8080/api/auth/token
 user.api.url = http://localhost:8080/api/user
 authorization.api.url = http://localhost:8080/api/authorization
 
+id.folder.principal.app.provider = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
+
 
 app.principal = 1
 app.console = 2
