--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -11,6 +11,7 @@ auth.api.url = http://localhost:8080/api/auth/token
 document.api.url = http://localhost:8080/api/document
 user.api.url = http://localhost:8080/api/user
 authorization.api.url = http://localhost:8080/api/authorization
+client.api.url = http://localhost:8080/api/client
 
 
 app.principal = 1
