--- a/app-provider-general-microservice-dev.properties
+++ b/app-provider-general-microservice-dev.properties
@@ -20,6 +20,8 @@ client.api.url = http://localhost:8080/api/client
 user.api.url = http://localhost:8080/api/user
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
+audit.api.url = http://localhost:8080/api/audit
+
 
 p.admin.plataform = 1
 p.super.admin=2
