--- a/app-provider-indicator-microservice-dev.properties
+++ b/app-provider-indicator-microservice-dev.properties
@@ -17,6 +17,7 @@ provider.api.url = http://localhost:8080/api/provider
 console.api.url = http://localhost:8080/api/console
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
+audit.api.url = http://localhost:8080/api/audit
 
 p.admin.plataform = 1
 p.super.admin=2
