--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -12,6 +12,7 @@ document.api.url = http://localhost:8080/api/document
 user.api.url = http://localhost:8080/api/user
 authorization.api.url = http://localhost:8080/api/authorization
 client.api.url = http://localhost:8080/api/client
+audit.api.url = http://localhost:8080/api/audit
 
 
 app.principal = 1
