--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -4,6 +4,7 @@ provider=http://localhost:5173/app-ppal#
 
 auth.api.url = http://localhost:8080/api/auth/token
 document.api.url = http://localhost:8080/api/document
+audit.api.url = http://localhost:8080/api/audit
 
 test.mail = cgonzalez@activos.com.co
 
