--- a/provider-microservice-dev.properties
+++ b/provider-microservice-dev.properties
@@ -22,6 +22,7 @@ user.api.url = http://localhost:8080/api/user
 client.api.url = http://localhost:8080/api/client
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
+audit.api.url = http://localhost:8080/api/audit
 
 p.admin.plataform = 1
 p.super.admin=2
