--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -6,6 +6,7 @@ mail.api.url = http://localhost:8080/api/mail
 authorization.api.url = http://localhost:8080/api/authorization
 client.api.url = http://localhost:8080/api/client
 user.api.url = http://localhost:8080/api/user
+audit.api.url = http://localhost:8080/api/audit
 
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
