--- a/authorization-microservice-dev.properties
+++ b/authorization-microservice-dev.properties
@@ -12,6 +12,7 @@ document.api.url = http://localhost:8080/api/document
 user.api.url = http://localhost:8080/api/user
 console.api.url = http://localhost:8080/api/console
 client.api.url = http://localhost:8080/api/client
+audit.api.url = http://localhost:8080/api/audit
 
 
 app.principal = 1
