--- a/client-microservice-dev.properties
+++ b/client-microservice-dev.properties
@@ -10,6 +10,7 @@ eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
 user.api.url = http://localhost:8080/api/user
 authorization.api.url = http://localhost:8080/api/authorization
+audit.api.url = http://localhost:8080/api/audit
 
 id.folder.principal.app.provider = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
 
