--- a/document-microservice-dev.properties
+++ b/document-microservice-dev.properties
@@ -9,6 +9,7 @@ spring.servlet.multipart.max-file-size = 50MB
 app.console = 2
 app.provider = 3
 auth.api.url = http://localhost:8080/api/auth/token
+audit.api.url = http://localhost:8080/api/audit
 
 p.admin.plataform = 1
 p.super.admin=2
