--- a/user-microservice-dev.properties
+++ b/user-microservice-dev.properties
@@ -9,6 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
 user.api.url = http://localhost:8080/api/user
+audit.api.url = http://localhost:8080/api/audit
 
 
 app.principal = 1
