--- a/audit-microservice-dev.properties
+++ b/audit-microservice-dev.properties
@@ -6,6 +6,9 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+eureka.instance.hostname=localhost
+
+
 app.principal = 1
 app.console = 2
 app.provider = 3
