--- a/provider-microservice-dev.properties
+++ b/provider-microservice-dev.properties
@@ -23,6 +23,7 @@ client.api.url = http://localhost:8080/api/client
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
 audit.api.url = http://localhost:8080/api/audit
+app.provider.general.api.url = http://localhost:8080/api/app-provider/general
 
 p.admin.plataform = 1
 p.super.admin=2
