--- a/app-payroll-payment-microservice-dev.properties
+++ b/app-payroll-payment-microservice-dev.properties
@@ -10,3 +10,19 @@ spring.jpa.hibernate.ddl-auto=update
 domain=http://localhost:5173/
 eureka.instance.hostname=localhost
 
+app.principal = 1
+app.console = 2
+app.provider = 3
+
+p.admin.plataform = 1
+p.super.admin=2
+p.admin=3
+p.reader=4
+p.provider=5
+
+t.admin.plataform = 1
+t.client = 2
+t.provider =3
+
+t.process = 1
+p.process = 2
