--- a/app-payroll-general-microservice-dev.properties
+++ b/app-payroll-general-microservice-dev.properties
@@ -10,6 +10,9 @@ spring.jpa.hibernate.ddl-auto=update
 domain=http://localhost:5173/
 eureka.instance.hostname=localhost
 
+auth.api.url = http://localhost:8080/api/auth/token
+
+
 app.principal = 1
 app.console = 2
 app.provider = 3
