--- a/provider-microservice-dev.properties
+++ b/provider-microservice-dev.properties
@@ -1,4 +1,4 @@
-app-provider.property= App Proveedor Profile Developer
+app-provider.property= App Proveedor Profile Developer f
 
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
