--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,8 +1,9 @@
 console.property= Console Profile Developer
 
-spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://31.220.21.203:3306/cp_proyectos
+spring.datasource.username=cp_crodriguez
+spring.datasource.password=i64PJf#b%@wtHfyp
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
