--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,8 +1,8 @@
 console.property= Console Profile Developer
 
-spring.datasource.url=jdbc:mysql://31.220.21.203:3306/cp_proyectos
-spring.datasource.username=cp_crodriguez
-spring.datasource.password=i64PJf#b%@wtHfyp
+spring.datasource.url=jdbc:mysql://31.220.21.203:3306/crcodese_prueba_Activos
+spring.datasource.username=crcodese_camiloActivos
+spring.datasource.password=%=78.6rS6llW
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
