--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,6 +1,6 @@
 console.property= Console Profile Developer
 
-spring.datasource.url=jdbc:mysql://157.90.91.29:3306/crcodese_prueba_Activos
+spring.datasource.url=jdbc:mysql://157.90.91.29:3306/crcodese_proyectos
 spring.datasource.username=crcodese_admon
 spring.datasource.password=bEOF$BY,jHlo
 
