--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,6 +1,6 @@
 console.property= Console Profile Developer
 
-spring.datasource.url=jdbc:mysql://192.168.0.1:3306/crcodese_proyectos
+spring.datasource.url=jdbc:mysql://crcodeservices.com:3306/crcodese_proyectos
 spring.datasource.username=crcodese_admon
 spring.datasource.password=bEOF$BY,jHlo
 
