--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,8 +1,8 @@
 console.property= Console Profile Developer
 
-spring.datasource.url=jdbc:mysql://crcodeservices.com:3306/crcodese_proyectos
+spring.datasource.url=jdbc:mysql://157.90.91.29:3306/crcodese_proyectos
 spring.datasource.username=crcodese_admon
-spring.datasource.password=bEOF$BY,jHlo
+spring.datasource.password=bEOF$BY,jHlosfddsfsd
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
