--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -2,7 +2,7 @@ console.property= Console Profile Developer
 
 spring.datasource.url=jdbc:mysql://157.90.91.29:3306/crcodese_proyectos
 spring.datasource.username=crcodese_admon
-spring.datasource.password=bEOF$BY,jHlosfddsfsd
+spring.datasource.password=}lBS8=h5R-J,
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
