--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -7,7 +7,7 @@ spring.datasource.password=}lBS8=h5R-J,
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.instance.hostname=localhost
+#eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
 document.api.url = http://localhost:8080/api/document
 user.api.url = http://localhost:8080/api/user
