--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -8,7 +8,8 @@ client.api.url = http://localhost:8080/api/client
 user.api.url = http://localhost:8080/api/user
 audit.api.url = http://localhost:8080/api/audit
 
-spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
+#spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
+#spring.datasource.url=jdbc:mysql://172.21.176.1:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
