--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -1,5 +1,6 @@
 auth.property= Auth Profile Developer
 
+eureka.instance.hostname=localhost
 console.api.url = http://localhost:8080/api/console
 mail.api.url = http://localhost:8080/api/mail
 authorization.api.url = http://localhost:8080/api/authorization
