--- a/app-payroll-general-microservice-dev.properties
+++ b/app-payroll-general-microservice-dev.properties
@@ -1,6 +1,7 @@
 app-provider.property= App Payroll General Profile Developer
 
-spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal-dev
+eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,8 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 domain=http://localhost:5173/
 eureka.instance.hostname=localhost
 
-auth.api.url = http://localhost:8080/api/auth/token
 
+auth.api.url = http://localhost:8080/api/auth/token
 
 app.principal = 1
 app.console = 2
