--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -1,6 +1,11 @@
 auth.property= Auth Profile Developer
 
 eureka.instance.hostname=localhost
+
+#Cambiar en entorno real.
+eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
+
+
 console.api.url = http://localhost:8080/api/console
 mail.api.url = http://localhost:8080/api/mail
 authorization.api.url = http://localhost:8080/api/authorization
@@ -8,6 +13,8 @@ client.api.url = http://localhost:8080/api/client
 user.api.url = http://localhost:8080/api/user
 audit.api.url = http://localhost:8080/api/audit
 
+
+#Cambiar en entorno real.
 #spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
 spring.datasource.username=root
