--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,8 +1,9 @@
 console.property= Console Profile Developer
 
-spring.datasource.url=jdbc:mysql://157.90.91.29:3306/crcodese_proyectos
-spring.datasource.username=crcodese_admon
-spring.datasource.password=}lBS8=h5R-J,
+eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
