--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -1,7 +1,10 @@
 mail.property= Mail Profile Develope
-eureka.instance.hostname=localhost
-provider=http://localhost:5173/app-ppal#
 
+
+eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
+
+provider=http://localhost:5173/app-ppal#
 auth.api.url = http://localhost:8080/api/auth/token
 document.api.url = http://localhost:8080/api/document
 audit.api.url = http://localhost:8080/api/audit
