--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,7 +1,7 @@
 console.property= Console Profile Developer
 
-#eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
-eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
+#eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka/
 spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
