--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -4,9 +4,13 @@ eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
 #eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka/
 eureka.instance.hostname=localhost
 
-spring.datasource.url=jdbc:mysql://157.90.91.29:3306/crcodese_proyectos
-spring.datasource.username=crcodese_admon
-spring.datasource.password=}lBS8=h5R-J,
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
+spring.datasource.username=root
+spring.datasource.password=
+
+#spring.datasource.url=jdbc:mysql://157.90.91.29:3306/crcodese_proyectos
+#spring.datasource.username=crcodese_admon
+#spring.datasource.password=}lBS8=h5R-J,
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
