--- a/audit-microservice-dev.properties
+++ b/audit-microservice-dev.properties
@@ -1,14 +1,13 @@
-console.property= Audit Profile Developer
+audit.property= Audit Profile Developer
 
+eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
+
 spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-
-eureka.instance.hostname=localhost
-
 
 app.principal = 1
 app.console = 2
