--- a/user-microservice-dev.properties
+++ b/user-microservice-dev.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 eureka.instance.hostname=localhost
-auth.api.url = http://AUTH-MICROSERVICE:8080/api/auth/token
+auth.api.url = http://AUTH-MICROSERVICE/api/auth/token
 user.api.url = http://localhost:8080/api/user
 audit.api.url = http://localhost:8080/api/audit
 
