--- a/user-microservice-dev.properties
+++ b/user-microservice-dev.properties
@@ -8,9 +8,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 eureka.instance.hostname=localhost
-auth.api.url = lb://AUTH-MICROSERVICE/api/auth/token
-user.api.url = http://localhost:8080/api/user
-audit.api.url = http://localhost:8080/api/audit
+auth.api.url = http://host.docker.internal:8080/api/auth/token
+user.api.url = http://host.docker.internal:8080/api/user
+audit.api.url = http://host.docker.internal:8080/api/audit
 
 
 app.principal = 1
