--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -5,12 +5,12 @@ auth.property= Auth Profile Developer
 eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
 eureka.instance.hostname=localhost
 
-console.api.url = http://localhost:8080/api/console
-mail.api.url = http://localhost:8080/api/mail
-authorization.api.url = http://localhost:8080/api/authorization
-client.api.url = http://localhost:8080/api/client
-user.api.url = http://localhost:8080/api/user
-audit.api.url = http://localhost:8080/api/audit
+console.api.url = http://host.docker.internal:8080/api/console
+mail.api.url = http://host.docker.internal:8080/api/mail
+authorization.api.url = http://host.docker.internal:8080/api/authorization
+client.api.url = http://host.docker.internal:8080/api/client
+user.api.url = http://host.docker.internal:8080/api/user
+audit.api.url = http://host.docker.internal:8080/api/audit
 
 
 #Cambiar en entorno real.
