--- a/client-microservice-dev.properties
+++ b/client-microservice-dev.properties
@@ -8,11 +8,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 eureka.instance.hostname=localhost
-auth.api.url = http://localhost:8080/api/auth/token
-user.api.url = http://localhost:8080/api/user
-authorization.api.url = http://localhost:8080/api/authorization
-audit.api.url = http://localhost:8080/api/audit
-document.api.url = http://localhost:8080/api/document
+auth.api.url = http://host.docker.internal:8080/api/auth/token
+user.api.url = http://host.docker.internal:8080/api/user
+authorization.api.url = http://host.docker.internal:8080/api/authorization
+audit.api.url = http://host.docker.internal:8080/api/audit
+document.api.url = http://host.docker.internal:8080/api/document
 
 id.folder.principal.app.provider = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
 
