--- a/provider-document-microservice-dev.properties
+++ b/provider-document-microservice-dev.properties
@@ -15,14 +15,14 @@ app.provider = 3
 domain=http://localhost:5173/
 
 eureka.instance.hostname=localhost
-auth.api.url = http://localhost:8080/api/auth/token
-app.provider.general.api.url = http://localhost:8080/api/app-provider/general
-provider.api.url = http://localhost:8080/api/provider
-user.api.url = http://localhost:8080/api/user
-client.api.url = http://localhost:8080/api/client
-document.api.url = http://localhost:8080/api/document
-mail.api.url = http://localhost:8080/api/mail
-audit.api.url = http://localhost:8080/api/audit
+auth.api.url = http://host.docker.internal:8080/api/auth/token
+app.provider.general.api.url = http://host.docker.internal:8080/api/app-provider/general
+provider.api.url = http://host.docker.internal:8080/api/provider
+user.api.url = http://host.docker.internal:8080/api/user
+client.api.url = http://host.docker.internal:8080/api/client
+document.api.url = http://host.docker.internal:8080/api/document
+mail.api.url = http://host.docker.internal:8080/api/mail
+audit.api.url = http://host.docker.internal:8080/api/audit
 
 p.admin.plataform = 1
 p.super.admin=2
