--- a/user-microservice-dev.properties
+++ b/user-microservice-dev.properties
@@ -1,4 +1,4 @@
-console.property= Console Profile Developers
+console.property= Console Profile Developer
 
 eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
 spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
