--- a/document-microservice-dev.properties
+++ b/document-microservice-dev.properties
@@ -2,7 +2,7 @@ document.property= Document Profile Developer
 
 id.folder.trash = 174FUdX5ZqKehqISs8ZXSydXn5MJKciJF
 
-eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.max-file-size = 50MB
