--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -2,20 +2,20 @@ auth.property= Auth Profile Developer
 
 
 #Cambiar en entorno real.
-eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 
-console.api.url = http://host.docker.internal:8080/api/console
-mail.api.url = http://host.docker.internal:8080/api/mail
-authorization.api.url = http://host.docker.internal:8080/api/authorization
-client.api.url = http://host.docker.internal:8080/api/client
-user.api.url = http://host.docker.internal:8080/api/user
-audit.api.url = http://host.docker.internal:8080/api/audit
+console.api.url = http://localhost:8080/api/console
+mail.api.url = http://localhost:8080/api/mail
+authorization.api.url = http://localhost:8080/api/authorization
+client.api.url = http://localhost:8080/api/client
+user.api.url = http://localhost:8080/api/user
+audit.api.url = http://localhost:8080/api/audit
 
 
 #Cambiar en entorno real.
 #spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
+spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
