--- a/authorization-microservice-dev.properties
+++ b/authorization-microservice-dev.properties
@@ -1,19 +1,19 @@
 console.property= Console Profile Developer
 
-eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 eureka.instance.hostname=localhost
-auth.api.url = http://host.docker.internal:8080/api/auth/token
-document.api.url = http://host.docker.internal:8080/api/document
-user.api.url = http://host.docker.internal:8080/api/user
-console.api.url = http://host.docker.internal:8080/api/console
-client.api.url = http://host.docker.internal:8080/api/client
-audit.api.url = http://host.docker.internal:8080/api/audit
+auth.api.url = http://localhost:8080/api/auth/token
+document.api.url = http://localhost:8080/api/document
+user.api.url = http://localhost:8080/api/user
+console.api.url = http://localhost:8080/api/console
+client.api.url = http://localhost:8080/api/client
+audit.api.url = http://localhost:8080/api/audit
 
 
 app.principal = 1
