--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,11 +1,11 @@
 console.property= Console Profile Developer
 
-eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
-#eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 
 
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
+spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -16,12 +16,12 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-auth.api.url = http://host.docker.internal:8080/api/auth/token
-document.api.url = http://host.docker.internal:8080/api/document
-user.api.url = http://host.docker.internal:8080/api/user
-authorization.api.url = http://host.docker.internal:8080/api/authorization
-client.api.url = http://host.docker.internal:8080/api/client
-audit.api.url = http://host.docker.internal:8080/api/audit
+auth.api.url = http://localhost:8080/api/auth/token
+document.api.url = http://localhost:8080/api/document
+user.api.url = http://localhost:8080/api/user
+authorization.api.url = http://localhost:8080/api/authorization
+client.api.url = http://localhost:8080/api/client
+audit.api.url = http://localhost:8080/api/audit
 
 app.principal = 1
 app.console = 2
