--- a/provider-microservice-dev.properties
+++ b/provider-microservice-dev.properties
@@ -1,7 +1,7 @@
 app-provider.property= App Proveedor Profile Developer f
 
-eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -16,15 +16,15 @@ app.provider = 3
 domain=http://localhost:5173/
 
 eureka.instance.hostname=localhost
-auth.api.url = http://host.docker.internal:8080/api/auth/token
-provider.document.api.url = http://host.docker.internal:8080/api/provider-document
-authorization.api.url = http://host.docker.internal:8080/api/authorization
-user.api.url = http://host.docker.internal:8080/api/user
-client.api.url = http://host.docker.internal:8080/api/client
-document.api.url = http://host.docker.internal:8080/api/document
-mail.api.url = http://host.docker.internal:8080/api/mail
-audit.api.url = http://host.docker.internal:8080/api/audit
-app.provider.general.api.url = http://host.docker.internal:8080/api/app-provider/general
+auth.api.url = http://localhost:8080/api/auth/token
+provider.document.api.url = http://localhost:8080/api/provider-document
+authorization.api.url = http://localhost:8080/api/authorization
+user.api.url = http://localhost:8080/api/user
+client.api.url = http://localhost:8080/api/client
+document.api.url = http://localhost:8080/api/document
+mail.api.url = http://localhost:8080/api/mail
+audit.api.url = http://localhost:8080/api/audit
+app.provider.general.api.url = http://localhost:8080/api/app-provider/general
 
 p.admin.plataform = 1
 p.super.admin=2
