--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -11,6 +11,8 @@ audit.api.url = http://localhost:8080/api/audit
 
 test.mail = cgonzalez@activos.com.co
 
+eureka.instance.hostname=localhost
+
 app.console = 2
 app.provider = 3
 
