--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -1,4 +1,4 @@
-mail.property= Mail Profile Develope
+mail.property= Mail Profile Developer
 
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
