--- a/app-provider-general-microservice-dev.properties
+++ b/app-provider-general-microservice-dev.properties
@@ -1,18 +1,25 @@
-app-provider.property= App Provider  General Profile Developer
+#Configuración Eureka
 
+app-provider.property= App Provider  General Profile Developer
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+domain=http://localhost:5173/
+
+#Configuración Base de datos.
+
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal-dev
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+#Variables de funcionamiento aplicación.
+
 id.folder.principal = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
 
 app.console = 2
 app.provider = 3
 
-domain=http://localhost:5173/
+#Comuniación con Microservicios.
 
 eureka.instance.hostname=localhost
 auth.api.url = http://localhost:8080/api/auth/token
@@ -22,17 +29,17 @@ user.api.url = http://localhost:8080/api/user
 document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
 audit.api.url = http://localhost:8080/api/audit
+authorization.api.url = http://localhost:8080/api/authorization
 
+#Variables de Autenticación.
 
-p.admin.plataform = 1
-p.super.admin=2
-p.admin=3
-p.reader=4
-p.provider=5
-
-t.admin.plataform = 1
-t.client = 2
-t.provider =3
-
-t.process = 1
-p.process = 2
+aut.console.platform = 21
+aut.console.super = 22
+aut.console.admin = 23
+aut.console.reader = 24
+aut.console.provider = 25
+aut.provider.super = 32
+aut.provider.admin = 33
+aut.provider.reader = 34
+aut.provider.provider = 35
+type.client = 2
