--- a/document-microservice-dev.properties
+++ b/document-microservice-dev.properties
@@ -1,26 +1,31 @@
+#Configuración Eureka
+
 document.property= Document Profile Developer
-
-id.folder.trash = 174FUdX5ZqKehqISs8ZXSydXn5MJKciJF
-
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
+
+#Variables de funcionamiento aplicación.
+
+id.folder.trash = 174FUdX5ZqKehqISs8ZXSydXn5MJKciJF
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.max-file-size = 50MB
 
-app.console = 2
-app.provider = 3
+#Comuniación con Microservicios.
+
 auth.api.url = http://localhost:8080/api/auth/token
 audit.api.url = http://localhost:8080/api/audit
+authorization.api.url = http://localhost:8080/api/authorization
 
-p.admin.plataform = 1
-p.super.admin=2
-p.admin=3
-p.reader=4
-p.provider=5
 
-t.admin.plataform = 1
-t.client = 2
-t.provider =3
+#Variables de Autenticación.
 
-t.process = 1
-p.process = 2
+aut.console.platform = 21
+aut.console.super = 22
+aut.console.admin = 23
+aut.console.reader = 24
+aut.console.provider = 25
+aut.provider.super = 32
+aut.provider.admin = 33
+aut.provider.reader = 34
+aut.provider.provider = 35
+type.client = 2
