--- a/app-provider-indicator-microservice-dev.properties
+++ b/app-provider-indicator-microservice-dev.properties
@@ -1,18 +1,24 @@
-app-provider.property= App Proveedor Data General Profile Developer
+#Configuración Eureka
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+app-provider.property= App Proveedor Indicator Data General Profile Developer
+eureka.instance.hostname=localhost
+
+#Configuración Base de datos.
+
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-app.console = 2
-app.provider = 3
+
+#Variables de funcionamiento aplicación.
 
 domain=http://localhost:5173/
 
-eureka.instance.hostname=localhost
+#Comuniación con Microservicios.
+
+authorization.api.url = http://localhost:8080/api/authorization
 auth.api.url = http://localhost:8080/api/auth/token
 provider.api.url = http://localhost:8080/api/provider
 console.api.url = http://localhost:8080/api/console
@@ -20,15 +26,15 @@ document.api.url = http://localhost:8080/api/document
 mail.api.url = http://localhost:8080/api/mail
 audit.api.url = http://localhost:8080/api/audit
 
-p.admin.plataform = 1
-p.super.admin=2
-p.admin=3
-p.reader=4
-p.provider=5
+#Variables de Autenticación.
 
-t.admin.plataform = 1
-t.client = 2
-t.provider =3
-
-t.process = 1
-p.process = 2
+aut.console.platform = 21
+aut.console.super = 22
+aut.console.admin = 23
+aut.console.reader = 24
+aut.console.provider = 25
+aut.provider.super = 32
+aut.provider.admin = 33
+aut.provider.reader = 34
+aut.provider.provider = 35
+type.client = 2
