--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -1,35 +1,24 @@
+#Configuración Eureka
+
 auth.property= Auth Profile Developer
-
-
-#Cambiar en entorno real.
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 
-console.api.url = http://localhost:8080/api/console
-mail.api.url = http://localhost:8080/api/mail
-authorization.api.url = http://localhost:8080/api/authorization
-client.api.url = http://localhost:8080/api/client
-user.api.url = http://localhost:8080/api/user
-audit.api.url = http://localhost:8080/api/audit
+#Configuración Base de datos.
 
-
-#Cambiar en entorno real.
-#spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-p.admin.plataform = 1
-p.super.admin=2
-p.admin=3
-p.reader=4
-p.provider=5
+#Comuniación con Microservicios.
 
-t.admin.plataform = 1
-t.client = 2
-t.provider =3
+mail.api.url = http://localhost:8080/api/mail
+authorization.api.url = http://localhost:8080/api/authorization
+client.api.url = http://localhost:8080/api/client
+audit.api.url = http://localhost:8080/api/audit
 
-t.process = 1
-p.process = 2
+
+
+
