--- a/authorization-microservice-dev.properties
+++ b/authorization-microservice-dev.properties
@@ -1,35 +1,46 @@
-console.property= Console Profile Developer
+#Configuración Eureka
 
+console.property= Console Profile Developer
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+
+#Configuración Base de datos.
+
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.instance.hostname=localhost
+#Variables de funcionamiento aplicación.
+
+app.console = 2
+app.provider = 3
+type.provider =3
+permission.provider=5
+total.process = 1
+provider.process = 2
+permission.admin.platform = 1
+
+#Variables de funcionamiento aplicación.
+
 auth.api.url = http://localhost:8080/api/auth/token
 document.api.url = http://localhost:8080/api/document
 user.api.url = http://localhost:8080/api/user
 console.api.url = http://localhost:8080/api/console
 client.api.url = http://localhost:8080/api/client
 audit.api.url = http://localhost:8080/api/audit
+authorization.api.url = http://localhost:8080/api/authorization
 
 
-app.principal = 1
-app.console = 2
-app.provider = 3
-id.folder.principal.app.provider = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
+#Variables de Autenticación.
 
-p.admin.plataform = 1
-p.super.admin=2
-p.admin=3
-p.reader=4
-p.provider=5
-
-t.admin.plataform = 1
-t.client = 2
-t.provider =3
-
-t.process = 1
-p.process = 2
+aut.console.platform = 21
+aut.console.super = 22
+aut.console.admin = 23
+aut.console.reader = 24
+aut.console.provider = 25
+aut.provider.super = 32
+aut.provider.admin = 33
+aut.provider.reader = 34
+aut.provider.provider = 35
