--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,18 +1,18 @@
-console.property= Console Profile Developer
+#Configuración Eureka
 
+console.property= Console Profile Developer
 eureka.instance.hostname=localhost
 
+#Configuración Base de datos.
 
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
-
-#spring.datasource.url=jdbc:mysql://157.90.91.29:3306/crcodese_proyectos
-#spring.datasource.username=crcodese_admon
-#spring.datasource.password=}lBS8=h5R-J,
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+
+#Comuniación con Microservicios.
 
 auth.api.url = http://localhost:8080/api/auth/token
 document.api.url = http://localhost:8080/api/document
@@ -21,19 +21,15 @@ authorization.api.url = http://localhost:8080/api/authorization
 client.api.url = http://localhost:8080/api/client
 audit.api.url = http://localhost:8080/api/audit
 
-app.principal = 1
-app.console = 2
-app.provider = 3
+#Variables de Autenticación.
 
-p.admin.plataform = 1
-p.super.admin=2
-p.admin=3
-p.reader=4
-p.provider=5
-
-t.admin.plataform = 1
-t.client = 2
-t.provider =3
-
-t.process = 1
-p.process = 2
+aut.console.platform = 21
+aut.console.super = 22
+aut.console.admin = 23
+aut.console.reader = 24
+aut.console.provider = 25
+aut.provider.super = 32
+aut.provider.admin = 33
+aut.provider.reader = 34
+aut.provider.provider = 35
+type.client = 2
