--- a/mail-microservice-dev.properties
+++ b/mail-microservice-dev.properties
@@ -1,31 +1,29 @@
+#Configuración Eureka
+
 mail.property= Mail Profile Developer
-
-
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
+eureka.instance.hostname=localhost
 
-provider=http://localhost:5173/app-ppal#
+#Variables de funcionamiento aplicación.
+domain=http://localhost:5173/
+
+#Variables de funcionamiento aplicación.
+
+authorization.api.url = http://localhost:8080/api/authorization
 auth.api.url = http://localhost:8080/api/auth/token
 document.api.url = http://localhost:8080/api/document
 audit.api.url = http://localhost:8080/api/audit
 
-test.mail = cgonzalez@activos.com.co
 
-eureka.instance.hostname=localhost
+#Variables de Autenticación.
 
-app.console = 2
-app.provider = 3
-
-domain=http://localhost:5173/
-p.admin.plataform = 1
-p.super.admin=2
-p.admin=3
-p.reader=4
-p.provider=5
-
-t.admin.plataform = 1
-t.client = 2
-t.provider =3
-
-t.process = 1
-p.process = 2
+aut.console.platform = 21
+aut.console.super = 22
+aut.console.admin = 23
+aut.console.reader = 24
+aut.console.provider = 25
+aut.provider.super = 32
+aut.provider.admin = 33
+aut.provider.reader = 34
+aut.provider.provider = 35
+type.client = 2
