--- a/provider-microservice-dev.properties
+++ b/provider-microservice-dev.properties
@@ -1,21 +1,29 @@
-app-provider.property= App Proveedor Profile Developer f
+#Configuración Eureka
 
+app-provider.property= App Proveedor Profile Developer f
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+
+#Configuración Base de datos.
+
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-id.folder.principal = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
 
+#Variables de funcionamiento aplicación.
 
-app.console = 2
 app.provider = 3
-
+type.provider = 1
+provider.process = 2
+permission.provider=5
 domain=http://localhost:5173/
 
-eureka.instance.hostname=localhost
+
+#Comuniación con Microservicios.
+
 auth.api.url = http://localhost:8080/api/auth/token
 provider.document.api.url = http://localhost:8080/api/provider-document
 authorization.api.url = http://localhost:8080/api/authorization
@@ -26,15 +34,15 @@ mail.api.url = http://localhost:8080/api/mail
 audit.api.url = http://localhost:8080/api/audit
 app.provider.general.api.url = http://localhost:8080/api/app-provider/general
 
-p.admin.plataform = 1
-p.super.admin=2
-p.admin=3
-p.reader=4
-p.provider=5
+#Variables de Autenticación.
 
-t.admin.plataform = 1
-t.client = 2
-t.provider =3
-
-t.process = 1
-p.process = 2
+aut.console.platform = 21
+aut.console.super = 22
+aut.console.admin = 23
+aut.console.reader = 24
+aut.console.provider = 25
+aut.provider.super = 32
+aut.provider.admin = 33
+aut.provider.reader = 34
+aut.provider.provider = 35
+type.client = 2
