--- a/user-microservice-dev.properties
+++ b/user-microservice-dev.properties
@@ -1,31 +1,34 @@
-console.property= Console Profile Developer
+#Configuración Eureka
 
+console.property= Console Profile Developer
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+
+#Configuración Base de datos.
+
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.instance.hostname=localhost
+
+#Comuniación con Microservicios.
+
 auth.api.url = http://localhost:8080/api/auth/token
 user.api.url = http://localhost:8080/api/user
 audit.api.url = http://localhost:8080/api/audit
 
 
-app.principal = 1
-app.console = 2
-app.provider = 3
+#Variables de Autenticación.
 
-p.admin.plataform = 1
-p.super.admin=2
-p.admin=3
-p.reader=4
-p.provider=5
-
-t.admin.plataform = 1
-t.client = 2
-t.provider =3
-
-t.process = 1
-p.process = 2
+aut.console.platform = 21
+aut.console.super = 22
+aut.console.admin = 23
+aut.console.reader = 24
+aut.console.provider = 25
+aut.provider.super = 32
+aut.provider.admin = 33
+aut.provider.reader = 34
+aut.provider.provider = 35
+type.client = 2
