--- a/user-microservice-dev.properties
+++ b/user-microservice-dev.properties
@@ -18,6 +18,7 @@ spring.jpa.hibernate.ddl-auto=update
 auth.api.url = http://localhost:8080/api/auth/token
 user.api.url = http://localhost:8080/api/user
 audit.api.url = http://localhost:8080/api/audit
+authorization.api.url = http://localhost:8080/api/authorization
 
 
 #Variables de Autenticación.
