--- a/provider-document-microservice-dev.properties
+++ b/provider-document-microservice-dev.properties
@@ -15,8 +15,10 @@ spring.jpa.hibernate.ddl-auto=update
 #Variables de funcionamiento aplicación.
 
 id.folder.principal = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
-
 domain=http://localhost:5173/
+app.provider = 3
+
+#Variables de funcionamiento aplicación.
 
 auth.api.url = http://localhost:8080/api/auth/token
 app.provider.general.api.url = http://localhost:8080/api/app-provider/general
