--- a/app-provider-indicator-microservice-dev.properties
+++ b/app-provider-indicator-microservice-dev.properties
@@ -15,6 +15,7 @@ spring.jpa.hibernate.ddl-auto=update
 #Variables de funcionamiento aplicación.
 
 domain=http://localhost:5173/
+app.provider = 3
 
 #Comuniación con Microservicios.
 
