--- a/console-microservice-dev.properties
+++ b/console-microservice-dev.properties
@@ -1,6 +1,7 @@
 #Configuración Eureka
 
 console.property= Console Profile Developer
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 
 #Configuración Base de datos.
