--- a/auth-microservice-dev.properties
+++ b/auth-microservice-dev.properties
@@ -18,6 +18,7 @@ mail.api.url = http://localhost:8080/api/mail
 authorization.api.url = http://localhost:8080/api/authorization
 client.api.url = http://localhost:8080/api/client
 audit.api.url = http://localhost:8080/api/audit
+mail.api.asurl = http://localhost:8080/api/maiasl
 
 
 
